kubernetes/apps/mail/bulwark/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bulwark-webmail
  namespace: mail
  labels:
    route.scope: external
  annotations:
    external-dns.alpha.kubernetes.io/target: external.vaderrp.com
    gatus.home-operations.com/enabled: "true"
    gatus.home-operations.com/endpoint: |
      group: Mail
      url: "https://webmail.vaderrp.com"
      conditions:
        - "[STATUS] == 200"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Mail
    gethomepage.dev/name: Webmail
    gethomepage.dev/icon: si-maildotcom
    gethomepage.dev/href: https://webmail.vaderrp.com
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway-public
      namespace: network
  hostnames:
    - webmail.vaderrp.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: bulwark
          port: 3000
